Make URL generation more robust